# chinese-writer-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
src/: dbase.rs  forms.rs  handlers.rs  main.rs
vol/: zidian.db
vol/assets/: chwriter.js  style.css
vol/templates/: base.html  index.html
vol/templates/components/: ansquiz.html  askquiz.html  parsed.html  zilist.html
